# webserv

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  add_hosts.sh  autoindex.html  client  client.cpp  cmake_install.cmake  compile_commands.json  config_hosts  config_map.txt  location_config.txt  main.cpp  our_tests.sh  overview  parsed_config  remove_hosts.sh  server_config.txt  teste  teste2  vimrc  webserv
.github/workflows/: cmake.yml
YoupiBanane/: youpi.bad_extension  youpi.bla
assets/: server.example.conf
clients/: client.py
include/: autoindex.hpp  config.hpp  enum.hpp  error.hpp  exception.hpp  http.hpp  http_handler.hpp  http_request.hpp  http_request_handler.hpp  http_response.hpp  log.hpp  req_handler.hpp  server.hpp  socket.hpp  utils.hpp
lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  http.cpp  server_socket.cpp  socket.cpp
lib/http/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  http.cpp  http_handler.cpp  http_request.cpp  http_response.cpp
lib/req_handler/: CMakeLists.txt  error.cpp  req_handler.cpp
lib/server/: CMakeLists.txt  config.cpp  server.cpp  server_block.cpp  server_socket.cpp
lib/socket/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  server_socket.cpp  socket.cpp
lib/utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  utils.cpp
nginx_docker/: Dockerfile  Makefile
nginx_docker/conf/: example_conf
nginx_docker/srcs/: example.html
nginx_docker/srcs/site2/fff/: iii.html
nginx_docker/srcs/test/: test.html
site_old/cgi-bin/: postCGI.cgi
site_old/conf/: conf3
site_old/errors/: 413.html  500.html
site_old/site1/: site1.html
site_old/site2/: site2.html
src/: .main.cpp.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  autoindex.cpp  cmake_install.cmake  config.cpp  delete_request.cpp  error.cpp  error.hpp  get_request.cpp  http.cpp  http.hpp  http_request.cpp  http_request_handler.cpp  http_response.cpp  http_response_old.cpp  main.cpp  post_request.cpp  r1  req_handler.cpp  req_handler.hpp  server.cpp  server.hpp  server_block.cpp  server_socket.cpp  socket.cpp  socket.hpp  tester_history  unknown_request.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  client.cpp  client.hpp  cmake_install.cmake  hello_test.cpp  test_http.cpp  test_http[1]_include.cmake  test_socket.cpp  test_socket[1]_include.cmake
www/: .main.c.swp  main.c  session  to_do_handler  todo
www/conf/: conf  conf1  conf2  conf4  conf_tester
www/error_pages/: error404.html
www/errors/: 301.html  400.html  403.html  404.html  405.html  414.html  431.html  503.html  505.html
www/errors/test_changing_path/: 404.html
www/site1/: aa  outro.html  site1_root.html
www/site1/ddd/: index.html
www/site1/fff/: get_cgi.py  post_cgi.py
www/site2/ggg/: py.txt  site2.html
www/site2/jjj/: soma.html
www/site3/: site3.html
www/site3/kkk/: site3.html
www/site3/mmm/: arq3
